Fix xml binding and remove unnecessary func from I/RoomRepo
Tag: #Refactor #Fix

--- a/app/src/main/res/layout/include_roll_note_panel.xml
+++ b/app/src/main/res/layout/include_roll_note_panel.xml
@@ -110,7 +110,7 @@
                         app:enabled='@{!rankEmpty}'
                         app:falseColor='@{R.attr.clDisable}'
                         app:srcCompat="@drawable/ic_rank"
-                        app:trueColor='@{!noteModel.noteEntity.getRankId().isEmpty() ? R.attr.clAccent : R.attr.clContent}'
+                        app:trueColor='@{noteModel.noteEntity.rankId != 0 ? R.attr.clAccent : R.attr.clContent}'
                         tools:tint="?attr/clAccent"/>
 
                 <ImageButton
