Fix crash on apply "without categories" in note
Tag: #Fix

--- a/app/src/main/res/layout/include_text_note_panel.xml
+++ b/app/src/main/res/layout/include_text_note_panel.xml
@@ -111,7 +111,7 @@
                         app:enabled='@{!rankEmpty}'
                         app:falseColor='@{R.attr.clDisable}'
                         app:srcCompat="@drawable/ic_rank"
-                        app:trueColor='@{noteModel.noteEntity.rankId != -1 ? R.attr.clAccent : R.attr.clContent}'
+                        app:trueColor='@{noteModel.noteEntity.rankId == -1 ? R.attr.clContent : R.attr.clAccent}'
                         tools:tint="?attr/clAccent"/>
 
                 <ImageButton
