--- a/app/src/main/res/layout-v21/item_rank.xml
+++ b/app/src/main/res/layout-v21/item_rank.xml
@@ -54,24 +54,12 @@
                         android:text='@{rankEntity.name}'
                         tools:text="@string/preview_rank_name"/>
 
-                <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-
-                    <TextView
-                            android:id="@+id/rank_text_count_text"
-                            style="@style/Text.SmallCard.Subtitle"
-                            android:layout_marginEnd="@dimen/layout_4dp"
-                            android:text='@{@string/list_item_rank_text_count + " " + rankEntity.getTextCount()}'
-                            tools:text="@string/preview_rank_text"/>
-
-                    <TextView
-                            android:id="@+id/rank_roll_count_text"
-                            style="@style/Text.SmallCard.Subtitle"
-                            android:text='@{@string/list_item_rank_roll_count + " " + rankEntity.getRollCount()}'
-                            tools:text="@string/preview_rank_roll"/>
-
-                </LinearLayout>
+                <TextView
+                        android:id="@+id/rank_text_count_text"
+                        style="@style/Text.SmallCard.Subtitle"
+                        android:layout_marginEnd="@dimen/layout_4dp"
+                        android:text='@{@string/list_item_rank_count + " " + rankEntity.noteCount}'
+                        tools:text="@string/preview_rank_count"/>
 
             </LinearLayout>
 
