Refactor todo (#RELEASE1, #RELEASE2)
Tag: #Refacotr

--- a/app/src/main/res/layout/include_info.xml
+++ b/app/src/main/res/layout/include_info.xml
@@ -13,7 +13,7 @@
 
     </data>
 
-    <!-- TODO #RELEASE добавить contentDescription и на основании него делать тесты -->
+    <!-- TODO #RELEASE2 добавить contentDescription и на основании него делать тесты -->
 
     <LinearLayout
             android:id="@+id/info_parent_container"
