--- a/app/src/main/res/values/styles_element.xml
+++ b/app/src/main/res/values/styles_element.xml
@@ -79,6 +79,15 @@
         <item name="android:scrollbars">none</item>
     </style>
 
+    <style name="Container.Develop"/>
+
+    <style name="Container.Develop.Scroll">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:fillViewport">true</item>
+        <item name="android:visibility">gone</item>
+    </style>
+
     <!-- Text -->
 
     <style name="Text"/>
@@ -193,6 +202,12 @@
         <item name="android:textAppearance">@style/Appearance.Main</item>
         <item name="android:textColorHint">?attr/clContentSecond</item>
         <item name="android:textIsSelectable">true</item>
+    </style>
+
+    <style name="Text.Develop">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:padding">@dimen/layout_4dp</item>
     </style>
 
     <!-- EditText -->
@@ -353,6 +368,16 @@
     <style name="Image.Note.Info">
         <item name="android:layout_marginRight">@dimen/layout_4dp</item>
         <item name="android:tint">?attr/clNoteIndicator</item>
+    </style>
+
+    <!-- ProgressBar -->
+
+    <style name="ProgressBar"/>
+
+    <style name="ProgressBar.Develop">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">center</item>
     </style>
 
 
