--- a/app/src/main/res/values/strings_app.xml
+++ b/app/src/main/res/values/strings_app.xml
@@ -45,72 +45,6 @@
     <string name="button_postpone">Postpone</string>
     <string name="button_disable">Disable</string>
 
-    <!-- Dialog -->
-
-    <!-- Dialog titles and text -->
-    <string name="dialog_title_clear_bin">Clear bin</string>
-    <string name="dialog_text_clear_bin">
-        Are you sure you want to permanently delete all not hidden notes from bin?
-    </string>
-
-    <string name="dialog_title_color">Color</string>
-    <string name="dialog_title_rank">Categories</string>
-
-    <string name="dialog_item_rank">Without category</string>
-
-    <string name="dialog_title_convert">Convert</string>
-    <string name="dialog_roll_convert_to_text">
-        Are you sure you want to convert the note? All checks in the list will be lost.
-    </string>
-    <string name="dialog_text_convert_to_roll">
-        Are you sure you want to convert the note? All empty lines will be deleted.
-    </string>
-
-    <string name="dialog_title_add_note">Create note</string>
-
-    <string name="dialog_text_volume" translatable="false">%d%%</string>
-
-    <!-- Dialog buttons -->
-    <string name="dialog_btn_accept">Apply</string>
-    <string name="dialog_btn_cancel">Cancel</string>
-
-    <string name="dialog_btn_yes">Yes</string>
-    <string name="dialog_btn_no">No</string>
-
-    <!-- Dialog menu buttons -->
-    <string name="dialog_menu_delete">Delete</string>
-    <string name="dialog_menu_restore">Restore</string>
-    <string name="dialog_menu_clear">Delete forever</string>
-    <string name="dialog_menu_copy">Copy text</string>
-
-    <string name="dialog_menu_status_bind">Bind to status bar</string>
-    <string name="dialog_menu_status_unbind">Unbind from status bar</string>
-    <string name="dialog_menu_convert_to_text">Convert to text</string>
-    <string name="dialog_menu_convert_to_roll">Convert to roll</string>
-
-    <string name="dialog_add_text">Text</string>
-    <string name="dialog_add_roll">List</string>
-
-    <string-array name="dialog_menu_text">
-        <item/>
-        <item>@string/dialog_menu_convert_to_roll</item>
-        <item>@string/dialog_menu_copy</item>
-        <item>@string/dialog_menu_delete</item>
-    </string-array>
-
-    <string-array name="dialog_menu_roll">
-        <item/>
-        <item>@string/dialog_menu_convert_to_text</item>
-        <item>@string/dialog_menu_copy</item>
-        <item>@string/dialog_menu_delete</item>
-    </string-array>
-
-    <string-array name="dialog_menu_bin">
-        <item>@string/dialog_menu_restore</item>
-        <item>@string/dialog_menu_copy</item>
-        <item>@string/dialog_menu_clear</item>
-    </string-array>
-
     <!-- Toast -->
     <string name="toast_note_save_done">Changes saved</string>
     <string name="toast_note_save_error">Changes not saved</string>
@@ -119,10 +53,6 @@
 
     <string name="toast_alarm_postpone">Postpone for %s</string>
 
-    <!-- About dialog -->
-    <string name="about_app_developer">Developer:\nKuznetsov Alexey</string>
-    <string name="about_app_logo_designer">Logo designer:\nPolepkina Arina</string>
-
     <!-- Develop -->
     <string name="button_show_intro">Show intro</string>
 
@@ -130,7 +60,7 @@
     <string name="hint_enter_rank_new">New category</string>
     <string name="hint_enter_rank_rename">New name for category</string>
     <string name="hint_enter_name">Title of note</string>
-    <string name="hint_view_name">Untitled</string>
+    <string name="hint_text_name">Untitled</string>
     <string name="hint_enter_text">Your text</string>
     <string name="hint_enter_roll">Your list item</string>
     <string name="hind_enter_roll_empty">This item will be removed</string>
