--- a/app/src/main/res/values/strings_preference.xml
+++ b/app/src/main/res/values/strings_preference.xml
@@ -5,6 +5,7 @@
     <string name="header_note">Notes</string>
     <string name="header_notification">Notifications</string>
     <string name="header_save">Save</string>
+    <string name="header_backup">Backup</string>
     <string name="header_other">Other</string>
 
     <!---->
@@ -23,6 +24,9 @@
     <string name="title_save_pause">Save when application paused</string>
     <string name="title_save_auto">Auto save</string>
     <string name="title_save_time">Period</string>
+
+    <string name="title_backup_export">Save data to file</string>
+    <string name="title_backup_import">Load data from file</string>
 
     <string name="title_other_rate">Rate</string>
     <string name="title_other_about">About app</string>
@@ -110,6 +114,9 @@
     <string name="key_save_auto" translatable="false">key_auto_save</string>
     <string name="key_save_time" translatable="false">key_save_time</string>
 
+    <string name="key_backup_export" translatable="false">key_backup_export</string>
+    <string name="key_backup_import" translatable="false">key_backup_import</string>
+    
     <string name="key_other_rate" translatable="false">key_rate</string>
     <string name="key_other_about" translatable="false">key_about</string>
 
