Add NoteItem for content tests
Tag: #Refactor

--- a/app/src/main/res/layout/include_item_note_roll.xml
+++ b/app/src/main/res/layout/include_item_note_roll.xml
@@ -21,7 +21,7 @@
                 tools:srcCompat="@drawable/ic_check_done"/>
 
         <TextView
-                android:id="@+id/note_roll_text"
+                android:id="@+id/note_roll_content_text"
                 style="@style/Text.Note.Roll"
                 android:text='@{rollEntity != null ? rollEntity.text : ""}'
                 tools:text="@string/preview_note_roll"/>
