--- a/app/src/main/res/values-ru/strings_preference.xml
+++ b/app/src/main/res/values-ru/strings_preference.xml
@@ -25,6 +25,7 @@
     <string name="title_save_time">Период</string>
 
     <string name="title_other_rate">Оценить</string>
+    <string name="title_other_privacy_policy">Политика конфиденциальности</string>
     <string name="title_other_about">О приложении</string>
 
     <!---->
