Add toast after set notification in text/rollNote
Tag: #New

--- a/app/src/main/res/values-ru/strings_app.xml
+++ b/app/src/main/res/values-ru/strings_app.xml
@@ -48,6 +48,7 @@
     <string name="toast_text_copy">Текст скопирован</string>
 
     <string name="toast_alarm_postpone">Отложено на %s</string>
+    <string name="toast_alarm_set">Установлено на %s</string>
 
     <!-- Develop -->
     <string name="button_show_intro">Вступление</string>
