--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -27,7 +27,7 @@
                     android:id="@+id/notification_info_include"
                     layout="@layout/include_info"
                     app:details='@{R.string.info_notification_empty_details}'
-                    app:icon='@{R.mipmap.ic_launcher}'
+                    app:icon='@{R.drawable.ic_notifications_none}'
                     app:title='@{R.string.info_notification_empty_title}'/>
 
             <androidx.recyclerview.widget.RecyclerView
